# public/swagger.json
@@ -661,6 +661,26 @@
         ]
       }
     },
+    "/profile-image/{id}": {
+      "get": {
+        "operationId": "ProfileImageController_generateProfileImage",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/receipt": {
       "post": {
         "operationId": "ReceiptController_create",
